Added BaseCommandConfiguration class that handles most of the similar CommandConfig logic.  Using Smart Pointers now instead of raw.  Removed Google Test/Mock from this project.

--- a/CommsProtocol/CommsProtocol.vcxproj.filters
+++ b/CommsProtocol/CommsProtocol.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="FileConfiguration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gtest\gtest-all.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gmock\gmock-all.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseCommandConfiguration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EthernetConfig.h">
@@ -39,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ICommandConfiguration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseCommandConfiguration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
