--- a/CommsProtocol/CommsProtocol.vcxproj
+++ b/CommsProtocol/CommsProtocol.vcxproj
@@ -93,6 +93,10 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Message>Combine all object files for this CONSOLE app to a lib that the Test Project can use.</Message>
+      <Command>lib /NOLOGO /OUT:"$(TargetPath).lib" "$(SolutionDir)$(Platform)\$(Configuration)\*.obj"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -109,6 +113,10 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Message>Combine all object files for this CONSOLE app to a lib that the Test Project can use.</Message>
+      <Command>lib /NOLOGO /OUT:"$(TargetPath).lib" "$(SolutionDir)$(Platform)\$(Configuration)\*.obj"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -121,6 +129,10 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>lib /NOLOGO /VERBOSE /OUT:"$(TargetPath).lib" "$(Platform)\$(Configuration)\*.obj"</Command>
+      <Message>Combine all object files for this CONSOLE app to a lib that the Test Project can use.</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -137,6 +149,10 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>lib /NOLOGO /OUT:"$(TargetPath).lib" "$(SolutionDir)$(Platform)\$(Configuration)\*.obj"</Command>
+      <Message>Combine all object files for this CONSOLE app to a lib that the Test Project can use.</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseCommandConfiguration.cpp" />
